[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerodha-mcp-server"
version = "1.0.0"
description = "Advanced Zerodha Kite trading MCP server with real-time data and AI analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "kiteconnect>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.16.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "ta-lib>=0.4.0",
    "plotly>=5.17.0",
    "yfinance>=0.2.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "schedule>=1.2.0",
    "python-telegram-bot>=20.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "flake8>=6.1.0"
]

[project.scripts]
zerodha-mcp-server = "zerodha_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zerodha_mcp_server"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
